--- a/htmlcheatsheet/index.html
+++ b/htmlcheatsheet/index.html
@@ -23,6 +23,7 @@
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 		</p>
+		<!-- strong and em have replaced and are recommended over b and i -->
 		<p>
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit, <a href="http://google.com" target="_blank">sed do eiusmod</a>
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
