--- a/htmlcheatsheet/blog.html
+++ b/htmlcheatsheet/blog.html
@@ -18,6 +18,16 @@
 		}
 	</style>
 </head>
+<!-- Semantic Tags:
+		<header></header>
+		<footer></footer>
+		<aside></aside>
+		<main></main>
+		<article></article>
+		<nav></nav>
+		<section></section>
+		<details></details> -->
+
 <body>
 	<header id="main-header">
 		<h1>My Website</h1>
