--- a/htmlcheatsheet/index.html
+++ b/htmlcheatsheet/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>HTML Cheat Sheet</title>
+		<title>HTML Cheatsheet</title>
 	</head>
 	<body>
+		 <!-- Chrome: CTRL+U show source code / F12 developer tools -->
 		<a href="blog.html">Go to blog</a>
 		<hr>
 		
@@ -60,19 +61,14 @@
 			</thead>
 			<tbody>
 				<tr>
+					<td>Marja Jämbeck</td>
+					<td>marja@somthing.com</td>
+					<td>34</td>
+				</tr>
+				<tr>
 					<td>Brad Traversy</td>
 					<td>brad@something.com</td>
 					<td>35</td>
-				</tr>
-				<tr>
-					<td>John Doe</td>
-					<td>jdoe@something.com</td>
-					<td>45</td>
-				</tr>
-				<tr>
-					<td>Sara Williams</td>
-					<td>sara@something.com</td>
-					<td>25</td>
 				</tr>
 			</tbody>
 		</table>
@@ -126,8 +122,7 @@
 		</form>
 
 		<!-- Button -->
-		<button>Click Me</button>
-
+		<button click="somefunction">Click ME</button>
 		<br>
 
 		<!-- Image -->
@@ -149,6 +144,17 @@
 
 		<p><cite>HTML crash course</cite> by Brad Traversy</p>
 
+		<!-- HTML5 Semantic Tags:
+        <header></header>
+        <footer></footer>
+        <aside></aside>
+        <main></main>
+        <article></article>
+        <nav></nav>
+        <section></section>
+        <details></details>
+		-->
+		
 		<div style="margin-top:500px"></div>
 	</body>
 </html>
