--- a/responsive_photography/index.html
+++ b/responsive_photography/index.html
@@ -66,5 +66,12 @@
           <strong>(617) 555-5555</strong>
         </p>
       </footer>
+
+      <script
+  src="http://code.jquery.com/jquery-3.4.0.min.js"
+  integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg="
+  crossorigin="anonymous"></script>
+
+      <script src="js/main.js"></script>
 </body>
 </html>
