--- a/elegant_blur_landing/index.html
+++ b/elegant_blur_landing/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="showcase">
         <div class="content">
-          <img src="https://image.ibb.co/ims4Ep/logo.png" class="logo" alt="Traversy Media">
+          <img src="./img/logo.png" class="logo" alt="Traversy Media">
           <div class="title">
             Welcome To Sekuretto Media
           </div>
