--- a/sluralpright/index.html
+++ b/sluralpright/index.html
@@ -12,7 +12,7 @@
         <div id="left">
           <div id="signin">
             <div class="logo">
-              <img src="https://image.ibb.co/hW1YHq/login-logo.png" alt="Sluralpright" />
+              <img src="./img/login-logo.png" alt="Sluralpright" />
             </div>
             <form>
               <div>
