--- a/sluralpright/index.html
+++ b/sluralpright/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Sign In - Sluralpright</title>
 </head>
 <body>
     <div id="wrapper">
@@ -39,7 +39,7 @@
           <footer id="main-footer">
             <p>Copyright &copy; 2018, Sluralpright All Rights Reserved</p>
             <div>
-              <a href="#">terms of use</a> | <a href="#">Privacy Policy</a>
+              <a href="#">Terms of use</a> | <a href="#">Privacy Policy</a>
             </div>
           </footer>
         </div>
