--- a/sliding_signinup/index.html
+++ b/sliding_signinup/index.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Weekly Coding Challenge #1: Sign in/up Form</h2>
+    <h2>Sign in/up Form</h2>
 <div class="container" id="container">
 	<div class="form-container sign-up-container">
 		<form action="#">
