--- a/fullscreen_video/index.html
+++ b/fullscreen_video/index.html
@@ -4,21 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
     <title>Video Background</title>
 </head>
 <body>
     <header class="v-header container">
         <div class="fullscreen-video-wrap">
-          <!--  https://www.videvo.net/video/typing-on-computer-white-bg/4475/ -->
-          <!-- DO NOT USE THIS VIDEO, I JUST NEEDED A HOSTED VIDEO FOR THIS CODEPEN> USE THE ONE ABOVE -->
-          <video src="https://production.cdmycdn.com/assets/marketing-pages/intensives/bws/coding-scenes-9a2031e8142b40bdb5d936d5eef33dfa.mp4" autoplay="" loop="">
+          <video src="Typing_light_01_Videvo.mov" autoplay="true" loop="true">
         </video>
         </div>
         <div class="header-overlay"></div>
         <div class="header-content text-md-center">
           <h1>Welcome Everyone</h1>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id temporibus perferendis necessitatibus numquam amet impedit explicabo? Debitis quasi ullam aperiam!</p>
-          <a class="btn">Find Out More</a>
+          <a class="btn">Read More</a>
         </div>
       </header>
     
