--- a/parallax_website/index.html
+++ b/parallax_website/index.html
@@ -56,7 +56,7 @@
   <div class="pimg1">
     <div class="ptext">
       <span class="border">
-        Traversy Media
+        Sekuretto Media
       </span>
     </div>
   </div>
