--- a/bootstrap/template.html
+++ b/bootstrap/template.html
@@ -11,7 +11,11 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+      <div class="container">
+            <h1 class="page-header">Hello, world! <small>Secondary text</small></h1>
+            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, sequi.</p>
+            <p><mark>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</mark> Veritatis sint libero reiciendis velit odio! Ullam repellendus iure iste esse possimus laudantium repudiandae minima aliquid voluptatem veniam cupiditate debitis vel quis dolore eveniet natus tempore eos excepturi doloremque, nesciunt cum optio expedita consectetur? Natus odio suscipit enim consequatur veniam rerum, aspernatur, deserunt perferendis explicabo mollitia ab repellat provident hic adipisci molestias eaque. Ad, quasi modi. Dolore tempora porro tempore impedit nostrum placeat nulla vitae esse itaque repudiandae <del>architecto error velit ipsa</del> obcaecati ullam in magni, sunt optio voluptatibus animi iste dignissimos perferendis aspernatur? Ut iste laboriosam error sit id? Rem, sunt.</p>
+      </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
