--- a/bootstrap/template.html
+++ b/bootstrap/template.html
@@ -12,9 +12,28 @@
   </head>
   <body>
       <div class="container">
+          <!-- TYPOGRAPHY -->
             <h1 class="page-header">Hello, world! <small>Secondary text</small></h1>
             <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, sequi.</p>
-            <p><mark>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</mark> Veritatis sint libero reiciendis velit odio! Ullam repellendus iure iste esse possimus laudantium repudiandae minima aliquid voluptatem veniam cupiditate debitis vel quis dolore eveniet natus tempore eos excepturi doloremque, nesciunt cum optio expedita consectetur? Natus odio suscipit enim consequatur veniam rerum, aspernatur, deserunt perferendis explicabo mollitia ab repellat provident hic adipisci molestias eaque. Ad, quasi modi. Dolore tempora porro tempore impedit nostrum placeat nulla vitae esse itaque repudiandae <del>architecto error velit ipsa</del> obcaecati ullam in magni, sunt optio voluptatibus animi iste dignissimos perferendis aspernatur? Ut iste laboriosam error sit id? Rem, sunt.</p>
+            <p><mark>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</mark> Veritatis sint libero reiciendis velit odio! Ullam repellendus iure iste esse possimus laudantium repudiandae minima aliquid voluptatem veniam cupiditate debitis vel quis dolore eveniet natus tempore eos excepturi doloremque, nesciunt cum optio expedita consectetur? Natus odio suscipit enim consequatur veniam rerum, aspernatur, deserunt perferendis explicabo mollitia ab repellat provident hic adipisci molestias eaque. Ad, quasi modi. Dolore tempora porro tempore impedit nostrum placeat nulla vitae esse itaque repudiandae <del>architecto error velit ipsa</del> obcaecati ullam in magni, sunt optio voluptatibus animi iste dignissimos perferendis aspernatur? Ut iste laboriosam error sit id? <u>Rem, sunt.</u></p>
+
+            <hr>
+
+            <!-- ALIGNMENT & TRANSFORMATION -->
+            <p class="text-left text-lowercase">Left aligned text.</p>
+            <p class="text-center text-uppercase">Center aligned text.</p>
+            <p class="text-right text-capitalize">Right aligned text.</p>
+            <p class="text-justify">Justified text.</p>
+            <p class="text-nowrap">No wrap text.</p>
+
+            <!-- QUICK FLOATS -->
+            <div class="pull-right">Div floated to right</div>
+            <div class="pull-left">Div floated to left</div>
+
+            <!-- CLEAR FLOAT -->
+            <div class="clearfix"></div>
+            
+            <hr>
       </div>
 
     <!-- Optional JavaScript -->
