bootstrap version update

--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -81,8 +81,8 @@
       <p class="text-nowrap">No wrap text.</p>
 
       <!-- QUICK FLOATS -->
-      <div class="pull-right">Div floated to right</div>
-      <div class="pull-left">Div floated to left</div>
+      <div class="float-right">Div floated to right</div>
+      <div class="float-left">Div floated to left</div>
 
       <!-- CLEAR FLOAT -->
       <div class="clearfix"></div>
@@ -90,9 +90,9 @@
       <hr>
 
       <!-- BLOCKQUOTE -->
-      <blockquote class="blockquote-reverse">
+      <blockquote class="blockquote">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-         <footer>Quote by <cite title="John Doe">John Doe</cite></footer>
+         <footer class="blockquote-footer">Quote by <cite title="John Doe">John Doe</cite></footer>
       </blockquote>
 
       <hr>
@@ -106,10 +106,10 @@
       </ul>
 
       <ul class="list-inline">
-        <li>Item One</li>
-        <li>Item Two</li>
-        <li>Item Three</li>
-        <li>Item Four</li>
+        <li class="list-inline-item">Item One</li>
+        <li class="list-inline-item">Item Two</li>
+        <li class="list-inline-item">Item Three</li>
+        <li class="list-inline-item">Item Four</li>
       </ul>
 
       <!-- CODE -->
