--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -15,6 +15,8 @@
     </style>
   </head>
   <body>
+    <!-- https://getbootstrap.com -->
+
     <nav class="navbar navbar-inverse">
       <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -142,29 +144,28 @@
 
     <!-- BUTTONS -->
     <div class="container">
-      <button class="btn btn-default">Button</button>
-      <a href="#" class="btn btn-default" role="button">Link</a>
-      <input type="submit" class="btn btn-default" value="Submit">
+      <button class="btn btn-light" type="button">Button</button>
+      <a href="#" class="btn btn-link" role="button">Link</a>
+      <input type="submit" class="btn btn-dark" type="submit" value="Submit">
       <br>
       <!-- CONTEXTUAL BUTTONS -->
-      <button class="btn btn-default">Default</button>
+      <!--<button class="btn btn-default">Default</button>-->
       <button class="btn btn-primary">Primary</button>
       <button class="btn btn-success">Success</button>
       <button class="btn btn-info">Info</button>
-      <button class="btn btn-warning">Warnig</button>
+      <button class="btn btn-warning">Warning</button>
       <button class="btn btn-danger">Delete</button>
       <button class="btn btn-link">Link</button>
       <br>
       <!-- BUTTON SIZES -->
       <button class="btn btn-default btn-lg">Default</button>
-      <button class="btn btn-default">Default</button>
-      <button class="btn btn-primary btn-sm">Default</button>
-      <button class="btn btn-default btn-xs" disabled="disabled">Default</button>
+      <button class="btn btn-primary btn-sm" disabled="disabled">Default</button>
     </div>
 
     <hr>
 
     <!-- FORMS -->
+    <!-- https://getbootstrap.com/docs/4.3/components/forms/ -->
     <div class="container">
       <form>
         <div class="form-group">
@@ -175,6 +176,12 @@
         <div class="form-group">
           <label>Email</label>
           <input type="email" class="form-control" placeholder="Add Email">
+          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        </div>
+
+        <div class="form-group">
+            <label for="exampleInputPassword1">Password</label>
+            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
         </div>
 
         <div class="form-group">
@@ -197,13 +204,12 @@
           <p class="help-block">Only png and jpg allowed</p>
         </div>
 
-        <div class="checkbox">
-          <label>
-            <input type="checkbox"> Check me out
-          </label>
-        </div>
+        <div class="form-group form-check">
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <label class="form-check-label" for="exampleCheck1">Check me out</label>
+          </div>
 
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button type="submit" class="btn btn-primary">Submit</button>
         </form>
 
         <hr>
