--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -237,7 +237,7 @@
 
    <!-- TABLES -->
     <div class="container">
-      <table class="table table-striped table-bordered table-hover table-condensed">
+      <table class="table table-striped table-bordered table-hover table-sm">
         <tr>
           <th>Firstname</th>
           <th>Lastname</th>
@@ -292,7 +292,8 @@
 
     <div class="container">
       <!-- PANELS -->
-      <div class="panel panel-primary">
+      <!-- panels and wells not supported in Bootstrap 4-->
+      <!--<div class="panel panel-primary">
         <div class="panel-heading">
           <h3 class="panel-title">Panel title</h3>
         </div>
@@ -301,15 +302,13 @@
         </div>
         <div class="panel-footer">Panel Footer</div>
       </div>
-
-      <hr>
-
+      <hr> -->
       <!-- WELLS -->
-      <div class="well"> Hello World</div>
+      <!-- <div class="well"> Hello World</div>
       <div class="well well-lg"> Hello World</div>
       <div class="well well-sm"> Hello World</div>
 
-      <hr>
+      <hr> -->
 
       <!-- ALERTS -->
       <div class="alert alert-success" role="alert">A success alert</div>
@@ -331,26 +330,26 @@
 
       <hr>
       <!-- LABELS -->
-      <span class="label label-default">Default</span>
+      <!-- have been replaced by badges in Bootstrap 4 -->
+      <!--<span class="label label-default">Default</span>
       <h1>Hello <span class="label label-primary">Primary</span></h1>
       <span class="label label-success">Success</span>
       <span class="label label-info">Info</span>
       <span class="label label-warning">Warning</span>
-      <span class="label label-danger">Danger</span>
+      <span class="label label-danger">Danger</span> -->
 
       <!-- BADGES -->
       <a href="#">Inbox <span class="badge">50</span></a>
 
       <button class="btn btn-primary" type="button">
-        Messages <span class="badge">2</span>
+        Messages <span class="badge badge-light">2</span>
       </button>
     </div>
 
     <!-- IMAGES -->
     <div class="container">
-      <img class="thumbnail" src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150">
-      <img class="img-rounded" src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150"><br><br>
-      <img class="img-circle" src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150">
+      <img class="img-fluid img-thumbnail" src="kitty.jpg">
+      <img class="img-fluid rounded" src="kitty.jpg"><br>
     </div>
 
     <hr>
@@ -433,7 +432,8 @@
     <div style="height:400px"></div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
   </body>
