Presentation website & fixes

--- a/csssandbox2/5_text_shadow.html
+++ b/csssandbox2/5_text_shadow.html
@@ -28,7 +28,7 @@
       }
 
       h1.d {
-        /* Negetive Values */
+        /* Negative Values */
         text-shadow: -0.4rem -0.3rem 0.7rem steelblue;
       }
     </style>
