--- a/csssandbox2/7_keyframes.html
+++ b/csssandbox2/7_keyframes.html
@@ -22,6 +22,7 @@
         /* animation-delay: 2s; */
         /* animation-direction: alternate; */
         /* animation-timing-function: ease-in-out; */
+        /* animation: animate 1 5s forwards 1s ease-in-out; */
       }
 
       @keyframes animate1 {
