--- a/hamburger_overlay_menu/index.html
+++ b/hamburger_overlay_menu/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-  <!--<link rel="stylesheet" href="menu.css">-->
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/menu.css">
   <title>Hamburger Menu Overlay</title>
 </head>
 <body>
@@ -27,8 +27,8 @@
     </div>
   </div>
 
-  <header class="showcase">
-    <div class="container showcase-inner">
+  <header id="showcase">
+    <div class="container showcase-container">
       <h1>Welcome</h1>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas maiores sint impedit delectus quam molestiae explicabo cum facere ratione veritatis.</p>
       <a href="#" class="btn">Read More</a>
