--- a/edgeledger/index.html
+++ b/edgeledger/index.html
@@ -1,151 +1,351 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/mobile.css">
-  <link rel="stylesheet" media="screen and (min-width: 1100px)" href="css/widescreen.css">
-  <title>EdgeLedger Financial | Accounting & Investment</title>
-</head>
-<body id="home">
-  <!-- Navbar -->
-  <nav id="navbar">
-    <h1 class="logo">
-      <span class="text-primary">
-        <i class="fas fa-book-open"></i> Edge</span>Ledger
-    </h1>
-    <ul>
-      <li><a href="#home">Home</a></li>
-      <li><a href="#what">What</a></li>
-      <li><a href="#who">Who</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
-  <!-- Header: Showcase -->
-  <header id="showcase">
-    <div class="showcase-content">
-      <h1 class="l-heading">
-        The Sky Is The Limit
-      </h1>
-      <p class="lead">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae voluptatibus debitis praesentium inventore, eum deserunt.
-      </p>
-      <a href="#what" class="btn">Read More</a>
-    </div>
-  </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
+      integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ="
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/lightbox.min.css" />
+    <link rel="stylesheet" href="css/utilities.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Welcome To EdgeLedger</title>
+  </head>
+  <body id="home">
+    <header class="hero">
+      <div id="navbar" class="navbar top">
+        <h1 class="logo">
+          <span class="text-primary"><i class="fas fa-book-open"></i> Edge</span
+          >Ledger
+        </h1>
+        <nav>
+          <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#cases">Cases</a></li>
+            <li><a href="#blog">Blog</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
 
-  <!-- Section: What We Do -->
-  <section id="what" class="bg-light py-1">
-    <div class="container">
-      <h2 class="m-heading text-center"><span class="text-primary">What</span> We Do</h2>
-      <div class="items">
-        <div class="item">
-          <i class="fas fa-university fa-2x"></i>
+      <div class="content">
+        <h1>The Sky Is The Limit</h1>
+        <p>We provide world class financial assistance</p>
+        <a href="#about" class="btn"
+          ><i class="fas fa-chevron-right"></i> Read More</a
+        >
+      </div>
+    </header>
+
+    <main>
+      <!-- About: Icons -->
+      <section id="about" class="icons bg-light">
+        <div class="flex-items">
           <div>
-            <h3>Investment Banking</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, voluptatum!</p>
+            <i class="fas fa-university fa-2x"></i>
+            <div>
+              <h3>Investment Banking</h3>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Tempore, iusto!
+              </p>
+            </div>
           </div>
-        </div>
-        <div class="item">
+          <div>
             <i class="fas fa-book-reader fa-2x"></i>
             <div>
-              <h3>Portfolio Management</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, voluptatum!</p>
+              <h3>Portfolio Manager</h3>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Tempore, iusto!
+              </p>
             </div>
-        </div>
-        <div class="item">
+          </div>
+          <div>
             <i class="fas fa-pencil-alt fa-2x"></i>
             <div>
               <h3>Tax & Custodial</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, voluptatum!</p>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Tempore, iusto!
+              </p>
             </div>
+          </div>
         </div>
+      </section>
+
+      <!-- About:Solutions -->
+      <section class="solutions flex-columns">
+        <div class="row">
+          <div class="column">
+            <div class="column-1">
+              <img src="images/home/people.jpg" alt="" />
+            </div>
+          </div>
+          <div class="column">
+            <div class="column-2 bg-primary">
+              <h4>What you are looking for</h4>
+              <h2>We provide bespoke solutions</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias
+                illum, animi earum ea amet sequi reiciendis sit corporis sunt
+                iusto cupiditate odio maxime adipisci cumque eligendi nemo
+                dolore id itaque?
+              </p>
+              <a href="#" class="btn btn-outline">
+                <i class="fas fa-chevron"></i>
+                Read More
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Cases -->
+      <section id="cases" class="cases flex-grid section-padding">
+        <header class="section-header">
+          <h4>This is what we do</h4>
+          <h2>Business Cases</h2>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat,
+            dolore!
+          </p>
+        </header>
+        <div class="row">
+          <div class="column">
+            <a
+              href="images/cases/cases1.jpg"
+              data-lightbox="cases"
+              data-title="Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat,
+              dolore!"
+            >
+              <img src="images/cases/cases1.jpg" alt="" />
+            </a>
+            <a
+              href="images/cases/cases2.jpg"
+              data-lightbox="cases"
+              data-title="Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat,
+              dolore!"
+            >
+              <img src="images/cases/cases2.jpg" alt="" />
+            </a>
+          </div>
+          <div class="column">
+            <a
+              href="images/cases/cases3.jpg"
+              data-lightbox="cases"
+              data-title="Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat,
+            dolore!"
+            >
+              <img src="images/cases/cases3.jpg" alt="" />
+            </a>
+            <a
+              href="images/cases/cases4.jpg"
+              data-lightbox="cases"
+              data-title="Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat,
+              dolore!"
+            >
+              <img src="images/cases/cases4.jpg" alt="" />
+            </a>
+          </div>
+          <div class="column">
+            <a
+              href="images/cases/cases5.jpg"
+              data-lightbox="cases"
+              data-title="Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat,
+            dolore!"
+            >
+              <img src="images/cases/cases5.jpg" alt="" />
+            </a>
+            <a
+              href="images/cases/cases6.jpg"
+              data-lightbox="cases"
+              data-title="Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat,
+              dolore!"
+            >
+              <img src="images/cases/cases6.jpg" alt="" />
+            </a>
+          </div>
+          <div class="column">
+            <a
+              href="images/cases/cases7.jpg"
+              data-lightbox="cases"
+              data-title="Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat,
+            dolore!"
+            >
+              <img src="images/cases/cases7.jpg" alt="" />
+            </a>
+            <a
+              href="images/cases/cases8.jpg"
+              data-lightbox="cases"
+              data-title="Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat,
+              dolore!"
+            >
+              <img src="images/cases/cases8.jpg" alt="" />
+            </a>
+          </div>
+        </div>
+      </section>
+
+      <!-- Blog -->
+      <section id="blog" class="blog flex-columns flex-reverse">
+        <div class="row">
+          <div class="column">
+            <div class="column-1">
+              <img src="images/home/blog.jpg" alt="" />
+            </div>
+          </div>
+          <div class="column">
+            <div class="column-2 bg-secondary">
+              <h4>April 16 2020</h4>
+              <h2>Blog Post One</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias
+                illum, animi earum ea amet sequi reiciendis sit corporis sunt
+                iusto cupiditate odio maxime adipisci cumque eligendi nemo
+                dolore id itaque?
+              </p>
+              <a href="blog.html" class="btn btn-outline">
+                <i class="fas fa-chevron"></i>
+                Read Our Blog
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Team -->
+      <section id="team" class="team section-padding">
+        <header class="section-header">
+          <h4>Who we are</h4>
+          <h2>Our Professional Team</h2>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat,
+            dolore!
+          </p>
+        </header>
+        <div class="flex-items">
+          <div>
+            <img src="images/team/person1.jpg" alt="" />
+            <h4>John Doe</h4>
+            <p>President</p>
+          </div>
+          <div>
+            <img src="images/team/person2.jpg" alt="" />
+            <h4>Jane Doe</h4>
+            <p>Vice President</p>
+          </div>
+          <div>
+            <img src="images/team/person3.jpg" alt="" />
+            <h4>Steve Smith</h4>
+            <p>Marketing Head</p>
+          </div>
+        </div>
+      </section>
+
+      <!-- Contact -->
+      <section id="contact" class="contact flex-columns">
+        <div class="row">
+          <div class="column">
+            <div class="column-1">
+              <img src="images/home/contact.jpg" alt="" />
+            </div>
+          </div>
+          <div class="column">
+            <div class="column-2 bg-light">
+              <h2>Request Callback</h2>
+              <form action="" class="callback-form">
+                <div class="form-control">
+                  <label for="name"></label>
+                  <input
+                    type="text"
+                    name="name"
+                    id="name"
+                    placeholder="Enter name"
+                  />
+                </div>
+                <div class="form-control">
+                  <label for="email"></label>
+                  <input
+                    type="email"
+                    name="email"
+                    id="email"
+                    placeholder="Enter email"
+                  />
+                </div>
+                <div class="form-control">
+                  <label for="phone"></label>
+                  <input
+                    type="text"
+                    name="phone"
+                    id="phone"
+                    placeholder="Enter phone"
+                  />
+                </div>
+                <input type="submit" value="Send" id="submit" class="btn" />
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer bg-dark">
+      <div class="social">
+        <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
+        <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
+        <a href="#"><i class="fab fa-youtube fa-2x"></i></a>
+        <a href="#"><i class="fab fa-linkedin fa-2x"></i></a>
       </div>
-    </div>
-  </section>
+      <p>Copyright &copy; 2020 - EdgeLedger</p>
+    </footer>
 
-  <!-- Section: Who We Are -->
-  <section id="who">
-    <div class="who-img"></div>
-    <div class="who-text bg-dark p-2">
-      <h2 class="m-heading"><span class="text-primary">Who</span> We Are</h2>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora culpa harum voluptas ratione enim consequuntur illo, atque, aut doloribus unde repellendus sit delectus beatae aspernatur placeat corrupti. Ipsa, itaque quas.</p>
-      <h3>Our Team</h3>
-      <ul class="list">
-        <li>Mark Smith: CEO</li>
-        <li>Shannon Johnson: CFO</li>
-        <li>John Corbit: Lead Accountant</li>
-        <li>Janet Williams: Investment Manager</li>
-        <li>Kara Jackson: Senior Accountant</li>
-      </ul>
-    </div>
-  </section>
+    <script
+      src="https://code.jquery.com/jquery-3.5.0.min.js"
+      integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ="
+      crossorigin="anonymous"
+    ></script>
+    <script src="js/lightbox.min.js"></script>
+    <script>
+      const navbar = document.getElementById('navbar');
+      let scrolled = false;
 
-  <!-- Section: Clients -->
-  <section id="clients" class="py-1">
-    <div class="container">
-      <h2 class="m-heading text-center">
-        <span class="text-primary">Our</span> Clients
-      </h2>
-      <div class="items py-1">
-        <div><img src="./img/logos/logo1.png" alt="Client"></div>
-        <div><img src="./img/logos/logo2.png" alt="Client"></div>
-        <div><img src="./img/logos/logo3.png" alt="Client"></div>
-        <div><img src="./img/logos/logo4.png" alt="Client"></div>
-        <div><img src="./img/logos/logo5.png" alt="Client"></div>
-      </div>
-    </div>
-  </section>
+      window.onscroll = function () {
+        if (window.pageYOffset > 100) {
+          navbar.classList.remove('top');
+          if (!scrolled) {
+            navbar.style.transform = 'translateY(-70px)';
+          }
+          setTimeout(function () {
+            navbar.style.transform = 'translateY(0)';
+            scrolled = true;
+          }, 200);
+        } else {
+          navbar.classList.add('top');
+          scrolled = false;
+        }
+      };
 
-  <!-- Section: Contact -->
-  <section id="contact">
-    <div class="contact-form bg-primary p-2">
-      <h2 class="m-heading">Contact Us</h2>
-      <p>Please use the form below to contact us</p>
-      <form action="process.php" methog="POST">
-        <div class="form-group">
-          <label for="name">Name</label>
-          <input type="text" name="name" id="name" placeholder="Enter Name">
-        </div>
-        <div class="form-group">
-          <label for="email">Email</label>
-          <input type="email" name="email" id="email" placeholder="Enter Email">
-        </div>
-        <div class="form-group">
-          <label for="phone">Phone Number</label>
-          <input type="text" name="phone" id="phone" placeholder="Enter Phone Number">
-        </div>
-        <div class="form-group">
-          <label for="message">Message</label>
-          <textarea name="message" id="message" placeholder="Enter Message"></textarea>
-        </div>
-        <input type="submit" value="Send" class="btn btn-dark">
-      </form>
-    </div>
-    <div class="map"></div>
-  </section>
+      // Smooth Scrolling
+      $('#navbar a, .btn').on('click', function (e) {
+        if (this.hash !== '') {
+          e.preventDefault();
 
-  <!-- Footer -->
-  <footer id="main-footer" class="bg-dark text-center py-1">
-    <div class="container">
-      <p>Copyright &copy; 2019, EdgeLedger, All Rights Reserved</p>
-    </div>
-  </footer>
+          const hash = this.hash;
 
-  <!-- JQuery CDN -->
-  <script
-  src="https://code.jquery.com/jquery-3.3.1.min.js"
-  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-  crossorigin="anonymous"></script>
-
-  <!-- Local JS File -->
-  <script src="js/main.js"></script>
-
-  <!-- Google Maps -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDkLT6mptjKpvWJYFigLsSXqZ6ogs6mLVg&callback=initMap"
-    async defer></script>
-</body>
+          $('html, body').animate(
+            {
+              scrollTop: $(hash).offset().top - 100,
+            },
+            800
+          );
+        }
+      });
+    </script>
+  </body>
 </html>
